$Id: NEWS,v 1.114 2001-06-20 01:17:12 flood Exp $

1.2.2 - CVS
---------------------------------
- Bugs 1164,1020,1134,1190,1207
  Documentation updates
- Bug 1145 - DirFakeUser can display current logged in user
- Bug 1210 - Possible silent truncation in net-ascii mode
- Bug 1212 - special files (devices, etc) didn't show up in directory
  listings.
- Bug 1189 - (again) <Directory> dups allowed in <Anonymous>
- Bug 1155 - non rfc behavior on filenames with spaces
- Bug 1193 - Error "~" processing while renaming files
- Bug 1203 - negation ('!') notation in Allow/Deny ACL broken
- Bug 1161 - %F magic cookie now displays free space on cwd
- Bug 1151 - Allow <Limit> searching in vhost or main server conf
- Copyright/License updated to allow linking to OpenSSL
- Bug 1183 - Removed duplicate find_class() call
- Bug 1189 - <Directory> duping checked for
- Bug 1185 - symlinks in homedirs now resolved at login
- Bug 1149 - Patch to contrib RPM init script
- Bug 1132 - Compilation fix for glibc 2.0
- Bug 1201 - Modifications to contrib/xferstats.holger-preiss
- Bug 1090 - {Allow,Deny}Filter Errors now *really* logged
- New mod_sql (and friends) from upstream maintainer
- Bug 1175 - GNU HURD portability
- Bug 1176 - PWD/XPWD can now be <Limit>ed
- Bug 1177 - mod_readme moved to contrib/
- Bug 1155 - HPUX portability cleanup
- Bug 1172 - Compiler clean for getopt code.
- Bug 1170 - Compiler cleanup for pr_fnmatch code.
- Bug 1169 - Better handling of DefaultRoot/DefaultChdir
- Bug 1168 - variable definitions moved from proftpd.h to main.c
- Bug 1160 - BSD root socket semantics needed for svr4.2mp;UX/4800
- Bug 1156 - USER command now takes an argument with spaces in it
- Bug 1152 - Off-by-one in the PassivePorts code
- Bug 1137 - NLST displayed hidden files

1.2.2rc2 - Released 04/20/2001
---------------------------------
The `AllowChmod' directive has been deprecated, and will not work
consistantly.  Use <Limit SITE_CHMOD> instead.
